# confusability

./: .gitignore  NOTES  README.md  analyze.ipynb  anaysis.ipynb  arc_noise_run.py  confuse_run.py  disaggregation.ipynb  gsm8k_noise_run.py  inference.py  instruction_tuning.py  pyproject.toml  result_parser.py  rlvr_run.py  setup_gh200.sh  transfer_noise_run.py
post-training/: README.md  alpaca_soup_run.py  dpo_run.py
random-labels/: run_all_models.sh
src/: data.py  evals.py  noise.py  result_parser.py  utils.py
