[project]
name = "confusability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "ipykernel>=6.30.1",
    "lm-eval>=0.4.9",
    "peft>=0.17.1",
    "protobuf>=6.32.1",
    "sentencepiece>=0.2.1",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
]
